kubernetes/apps/uxi/ptr/state/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uxi-ptr-state
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: uxi-ptr-server
      app.kubernetes.io/component: state
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uxi-ptr-server
        app.kubernetes.io/component: state
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 60
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        gpu.homelab/amd: 'true'
      containers:
        - name: state
          image: git.r1p.dev/unbound-xi/server:v0.1.2@sha256:faa4cac827ee5181c6be7cd61ea32303d53a06744db33ef4b710d0d44bf8bb3b
          imagePullPolicy: IfNotPresent
          command:
            - unbound-state
          args:
            - serve
          ports:
            - name: lane
              containerPort: 21015
              protocol: TCP
            - name: health
              containerPort: 21020
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              memory: 8Gi
              cpu: '4'
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
            - name: postgres-ca
              mountPath: /postgres-ca
              readOnly: true
          startupProbe:
            httpGet:
              path: /readyz
              port: health
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 120
          readinessProbe:
            httpGet:
              path: /readyz
              port: health
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /livez
              port: health
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: uxi-ptr-state-config
        - name: postgres-ca
          secret:
            secretName: uxi-ptr-postgres-ca
            items:
              - key: ca.crt
                path: ca.crt
  strategy:
    type: Recreate
