kubernetes/apps/uxi/ptr/state/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uxi-ptr-state
spec:
  selector:
    app.kubernetes.io/name: uxi-ptr-server
    app.kubernetes.io/component: state
  ports:
    - name: lane
      port: 21015
      targetPort: lane
